[package]
name = "client-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
tokio = "1.42.0"
rodio = "0.17"
crossbeam-channel = "0.5"
base64 = "0.21"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packetForge.git", branch = "main" }
sled = "0.34.7"
bincode = "1.3"
uuid = { version = "1", features = ["v4"] }
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }