[package]
name = "client-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packet-forge.git", branch = "main" }
routing-handler = { git = "ssh://git@github.com/Rusteze-AP/routing-handler.git" }
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
crossbeam = "0.8.4"
serde_json = "1.0"
tokio = "1.42.0"
sled = "0.34.7"
bytes = "1.5.0"
bincode = "1.3"
base64 = "0.21"
rodio = "0.17"